added banner and web development section

--- a/index.html
+++ b/index.html
@@ -10,10 +10,63 @@
 
 <body>
     <header>
-        <h3>Web Development Website</h3>
+        <div class="banner-section">
+            <div class="banner-text-content">
+                <img src="./assets/Group.png" alt="">
+                <h2>"In the near future, I hope to <br> become a Developer."</h2>
+                <p>we craft visually stunning and highly functional websites tailored to your business needs. </p>
+                <button class="button">Contact with me</button>
+            </div>
+        </div>
     </header>
     <main>
+        <section class="web-development-section">
+            <div class="development-section">
+                <div class="development-title-section">
+                    <h2>Why Web Development??</h2>
+                    <p>Web development is essential for creating a strong online presence, enabling businesses to reach
+                        a
+                        wider audience and engage customers effectively.</p>
+                </div>
 
+                <div>
+                    <div class="development-image-section">
+                        <div class="image-section">
+                            <h2>I will Do Coding and <br> Change The World</h2>
+                            <p>By mastering coding, I aim to innovate and solve real-world problems, driving positive
+                                change globally.</p>
+                            <button>Learn More</button>
+                        </div>
+                        <div>
+                            <img src="./assets/Layer_1.png" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="development-image-section">
+                            <div>
+                                <img src="./assets/Group 3.png" alt="">
+                            </div>
+                            <div class="image-section">
+                                <h2>I will help People by creating <br> Modern Web System</h2>
+                                <p>I am dedicated to helping people by developing modern web systems that enhance user
+                                    experiences and streamline processes.</p>
+                                <button>Learn More</button>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="development-image-section">
+                                <div class="image-section">
+                                    <h2>I will Do Coding and <br> Change The World</h2>
+                                    <p>My passion for technology fuels my mission to make a lasting impact.</p>
+                                    <button>Learn More</button>
+                                </div>
+                                <div>
+                                    <img src="./assets/Group 4.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        </section>
     </main>
     <footer>
 
