added my inspiration section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
                         </div>
                     </div>
         </section>
+        <section>
+            <div class="inspiration-section">
+                <h2>My Inspiration</h2>
+                <p>I am inspired by the endless possibilities technology offers to transform lives and businesses.</p>
+                <iframe style="margin: auto; border: 1px solid rgba(13, 19, 33, 0.2);
+                border-radius: 16px;
+                " width="1076" height="550" src="https://www.youtube.com/embed/kUMV7jmbpPY?si=RbJL-p-6I36tZwwA"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
     <footer>
 
