added current target section and support section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,38 @@
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
+        <section class="current-target-section">
+            <h2>My Current Target</h2>
+            <p>Integrate modern web technologies to ensure seamless <br> functionality across all devices.</p>
+            <div class="current-target-content-section">
+                <div class="current-target-box-contet">
+                    <img src="./assets/html.png" alt="">
+                    <h2>HTML</h2>
+                    <p>Develop clean, semantic HTML to structure content effectively and enhance accessibility.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div id="css-box-content" class="current-target-box-contet">
+                    <img src="./assets/css.png" alt="">
+                    <h2>CSS</h2>
+                    <p>Craft responsive and visually appealing layouts using CSS to enhance user engagement and accessibility.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div id="js-box-content" class="current-target-box-contet">
+                    <img src="./assets/js.png" alt="">
+                    <h2>JavaScript</h2>
+                    <p>Implement dynamic and interactive features using JavaScript to enhance user engagement and functionality.</p>
+                    <a href="">Learn More</a>
+                </div>
+            </div>
+        </section>
+        <section class="support-section">
+                <h2>I need Support</h2>
+                <p>Provide 24/7 support to ensure seamless operation <br> and address any issues promptly.</p>
+                <div>
+                    <input placeholder="Suggest me any feedback for me" type="text">
+                    <button id="button-text">Submit</button>
+                </div>
+        </section>
     </main>
     <footer>
 
