--- a/index.html
+++ b/index.html
@@ -113,7 +113,12 @@
         </section>
     </main>
     <footer>
-
+        <h2>An Open Commitment by Hoque Sifat</h2>
+        <div>
+            <a href="https://www.facebook.com/programmingHero/" target="_blank"><img src="./assets/facebook.png" alt=""></a>
+            <a href="https://github.com/programminghero1" target="_blank"><img src="./assets/github.png" alt=""></a>
+            <a href="https://bd.linkedin.com/company/programminghero" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+        </div>
     </footer>
 </body>
 
